fix(ui): correct transitions, overflows and layer underneath (z-index)

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -18,9 +18,14 @@ $dot-space: 10vmax
 
 body
   @include dot-pattern($dark-gray, $dot, $dot-size, $dot-space)
+  // overflow: hidden
+  // height: 100%
+  // margin: 0
 
 .grid
   height: 100vh
+  // z-index: 3
+  overflow-x: hidden
   position: relative
   display: flex
   justify-content: center
@@ -28,38 +33,48 @@ body
   flex-direction: column
   &__enter
     position: absolute
-    width: 60vmin
-    height: 90vh
-    z-index: 3
+    // width: 60vmin
+    // height: 90vh
+    z-index: 4
   &__wrapper
-    width: 100vw
-    height: 100vh
-    background-position: 0 0, 50px 50px
+    width: 100%
+    height: 100%
     input[type=checkbox]
       position: absolute
       cursor: pointer
       width: 100%
       height: 100%
-      z-index: 4
+      top: 0
+      left: 0
       opacity: 0
+      z-index: 3
       &:checked
         // Slide left
         &~div.grid__panel--left
           background-color: $panel-light
-          transform: translateX(0)
+          transform: translateX(-100%)
         // Slide right
         &~div.grid__panel--right
           background-color: $panel-dark
-          transform: translateX(0)
+          transform: translateX(100%)
   &__panel
+
     transition: all 1s ease-out
-    z-index: 2
     width: 50%
     height: 100%
     float: left
     &--left
       background-color: $panel-light
-      transform: translateX(-100%)
+      transform: translateX(0%)
     &--right
       background-color: $panel-dark
-      transform: translateX(100%)
+      transform: translateX(0%)
+  &__underneath
+    width: 100%
+    height: 100%
+    position: absolute
+    display: flex
+    align-items: center
+    flex-direction: column
+    & > *
+      z-index: -1
